fixed horizontal scroll

--- a/website/site.css
+++ b/website/site.css
@@ -8,7 +8,7 @@ h1 { -webkit-margin-before:0; -webkit-margin-after:0; margin-top:0; margin-botto
 h1{font-weight:normal; font-size:3em; letter-spacing: 0.06em; padding-top:25px; padding-bottom:25px;}
 
 
-.maincontainer{ width:100%; height:auto; overflow:hidden; background-color:#CFCFCF; min-width:1280px;}
+.maincontainer{ width:100%; height:auto; overflow:hidden; background-color:#CFCFCF; min-width:1250px;}
 .main {position:relative; max-width:1920px; margin:0 auto; min-height:100%;}
 .header {position:relative; color:#fff; height: 0;
     padding-top: 40%; background: url("images/header_image.jpg") center top no-repeat; background-size:contain;}
